--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,24 @@
-Source: template-repository
-Section: unknown
+Source: libmpack-lua
+Section: interpreters
 Priority: optional
-Maintainer: Tsic404 <liuheng@deepin.org>
-Build-Depends: debhelper (>= 11)
+Maintainer: James McCoy <jamessan@debian.org>
+Build-Depends: debhelper (>= 11),
+               dh-lua,
+               libmpack-dev,
 Standards-Version: 4.1.3
-Homepage: https://github.com/deepin-community/template-repository
-#Vcs-Browser: https://salsa.debian.org/debian/deepin-community-template-repository
-#Vcs-Git: https://salsa.debian.org/debian/deepin-community-template-repository.git
+Homepage: https://github.com/libmpack/libmpack-lua/
+Vcs-Git: https://salsa.debian.org/jamessan/libmpack-lua.git
+Vcs-Browser: https://salsa.debian.org/jamessan/libmpack-lua
 
-Package: template-repository
+Package: lua-mpack
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Pre-Depends: ${misc:Pre-Depends}
+Multi-Arch: same
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Provides: ${lua:Provides}
+XB-Lua-Versions: ${lua:Versions}
+Description: libmpack binding for the Lua language
+ libmpack is a small binary serialization/RPC library that implements both the
+ msgpack and msgpack-rpc specifications.
+ .
+ This package provides the Lua bindings based on libmpack.
